--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "image-url-validator": "^1.0.4",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.3",
     "pg": "^8.12.0",
