--- a/habbitApp/habbitApp/package.json
+++ b/habbitApp/habbitApp/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
@@ -19,6 +20,7 @@
     "axios": "^1.7.2",
     "react": "18.2.0",
     "react-native": "0.74.4",
+    "react-native-config": "^1.5.3",
     "react-native-gesture-handler": "^2.18.0",
     "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.8",
