--- a/habbitApp/habbitApp/package.json
+++ b/habbitApp/habbitApp/package.json
@@ -21,10 +21,12 @@
     "react": "18.2.0",
     "react-native": "0.74.4",
     "react-native-config": "^1.5.3",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.18.0",
     "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.33.0"
+    "react-native-screens": "^3.33.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -35,6 +37,7 @@
     "@react-native/metro-config": "0.74.86",
     "@react-native/typescript-config": "0.74.86",
     "@types/react": "^18.3.3",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
